<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_width="match_parent"
    tools:context=".activities.COERecordActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/coe_record_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:text="@string/create_record"
            android:fontFamily="@font/poppins_bold"
            android:textSize="20sp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/coe_record_action_button"
            android:layout_width="116dp"
            android:layout_height="56dp"
            android:layout_marginEnd="24dp"
            android:text="@string/save"
            android:backgroundTint="@color/black"
            android:fontFamily="@font/poppins_medium"
            android:textSize="16sp"
            android:textAllCaps="false"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="@+id/coe_record_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/coe_record_title" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="24dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/coe_record_systolic_edit_text_layout"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:hint="@string/systolic_pressure"
                android:textSize="16sp"
                android:layout_marginBottom="16dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/coe_record_systolic_edit_text_input"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:fontFamily="@font/poppins_regular"
                    android:textColor="@color/black"
                    android:backgroundTint="@color/white"
                    android:inputType="numberSigned"
                   />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/coe_record_diastolic_edit_text_layout"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:hint="@string/diastolic_pressure"
                android:textSize="16sp"
                android:layout_marginBottom="16dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/coe_record_diastolic_edit_text_input"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:fontFamily="@font/poppins_regular"
                    android:textColor="@color/black"
                    android:backgroundTint="@color/white"
                    android:inputType="numberSigned"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/coe_record_heart_rate_edit_text_layout"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:hint="@string/heart_rate"
                android:textSize="16sp"
                android:layout_marginBottom="16dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/coe_record_heart_rate_edit_text_input"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:fontFamily="@font/poppins_regular"
                    android:textColor="@color/black"
                    android:backgroundTint="@color/white"
                    android:inputType="numberSigned"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/coe_record_time_measured_edit_text_layout"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:hint="@string/time_measured"
                app:endIconMode="custom"
                app:endIconDrawable="@drawable/ic_outline_access_time_24"
                android:textSize="16sp"
                android:layout_marginBottom="16dp"

                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/coe_record_time_measured_edit_text_input"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:fontFamily="@font/poppins_regular"
                    android:textColor="@color/black"
                    android:backgroundTint="@color/white"
                    android:inputType="time"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/coe_record_date_edit_text_layout"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:hint="@string/date_measured"
                android:textSize="16sp"
                app:endIconMode="custom"
                app:endIconDrawable="@drawable/ic_outline_calendar_today_24"
                android:layout_marginBottom="16dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/coe_record_date_edit_text_input"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:fontFamily="@font/poppins_regular"
                    android:textColor="@color/black"
                    android:backgroundTint="@color/white"
                    android:inputType="date"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/coe_record_date_comment_text_layout"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:hint="@string/comment"
                android:textSize="16sp"
                android:layout_marginBottom="16dp"
                app:counterMaxLength="20"
                app:counterEnabled="true"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/coe_record_comment_edit_text_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="56dp"
                    android:fontFamily="@font/poppins_regular"
                    android:textColor="@color/black"
                    android:backgroundTint="@color/white"
                    android:minLines="2"
                    android:lines="2"

                    android:inputType="textMultiLine"
                    />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>